--- a/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj.filters
+++ b/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MenuController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
