Started AccountOperations class . getter and setters created but not all yet populated; currently getfNameLname and setFnameLname seem to work as expected. Place stub in main currently commented out for testing purposes.

--- a/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj.filters
+++ b/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="MenuController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JohnMRobertM_AccountOperations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
