--- a/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj
+++ b/GroupProject_Customer_Accounts/GroupProject_Customer_Accounts.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="JohnMRobertM_AccountOperations.h" />
     <ClInclude Include="MenuController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
